# binja-test-mocks

./: MIGRATION.md  PYPI_SETUP.md  README.md  SUMMARY.md  mypy.ini  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
examples/basic_plugin/: __init__.py  example_arch.py  test_example_arch.py
scripts/: run_tests.py  setup_mypy.py  setup_pyright.py
src/binja_test_mocks/: __init__.py  binja_api.py  coding.py  eval_llil.py  mock_analysis.py  mock_binaryview.py  mock_hlil.py  mock_llil.py  tokens.py
src/binja_test_mocks/scripts/: __init__.py  run_tests.py
src/binja_test_mocks/stubs/binaryninja/: __init__.pyi  architecture.pyi  binaryview.pyi  enums.pyi  function.pyi  highlevelil.pyi  interaction.pyi  log.pyi  lowlevelil.pyi  types.pyi
tests/: __init__.py  test_basic_import.py  test_binary_ninja_guard.py  test_mock_hlil.py  test_mock_llil_control_flow.py
